Updates: - Ajout de la page calendrier - Bugfix: Fiche événement dans la page recherche - Bugfix: Icônes dans le fixed navbar - Bugfix: Logo dans entreprises dans les pages annuaire, search

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -322,28 +322,25 @@ a:focus{
   padding: 10px 0;
   overflow: hidden;
   border-top: solid 1px $light_gray;
-  ul{
-    float: right;
-    list-style: none;
-    padding: 0;
+  list-style: none;
 
-    li{
+  li{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 5px;
+    margin-bottom: 5px;
+
+
+    a, span{
       display: inline-block;
-      vertical-align: top;
-      margin-left: 5px;
-      margin-bottom: 5px;
+      padding: 10px 15px;
+      font-weight: 700;
+      background-color: rgba($blue,0.8);
+      color: #fff;
+      border-color: #fff;
+    }
+    a.first{
 
-
-      a, span{
-        display: inline-block;
-        padding: 10px 15px;
-        font-weight: 700;
-        background-color: rgba($blue,0.8);
-        color: #fff;
-      }
-      a.first{
-
-      }
     }
   }
 }
