--- a/src/css/_search.scss
+++ b/src/css/_search.scss
@@ -36,7 +36,9 @@
   }
 }
 
-#search_result_evenements{
+#search_result_evenements,
+.evenement-mois{
+
   .liste-evenements{
     display: flex;
     flex-direction: row;
@@ -62,12 +64,28 @@
       .event_location,
       .annonceur,
       .event_date{
-        padding: 0 10px 5px;
+        padding: 0 10px 5px 30px;
         font-size: 13px;
-        font-style: italic;
+        position: relative;
+
+        &:before{
+          font-family: FontAwesome, sans-serif;
+          position: absolute;
+          left: 10px;
+          color: #B7B7B7;
+          top: 0;
+        }
       }
 
-
+      .event_location:before{
+        content: '\f015';
+      }
+      .event_date:before{
+        content: '\f073';
+      }
+      .annonceur:before{
+        content: '\f007';
+      }
       &:last-child{
         margin-bottom: 0;
       }
