Updates: - Inscriptions concours photos - login button dans le nav menu

--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -87,3 +87,18 @@
     background: rgba($orange,0.7);
   }
 }
+@keyframes gradientBorder {
+  0%{
+    border-color: rgba($blue,0.8);
+  }
+  40%{
+    border-color: rgba($blue,0.8);
+  }
+  60%{
+    border-color: rgba($orange,0.7);
+  }
+  100%{
+    border-color: rgba($orange,0.7);
+  }
+}
+
