--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -240,7 +240,6 @@ header{
       display: inline-block;
       width: 22px;
       height: 15px;
-      margin-right: 15px;
       background-size: cover;
       position: absolute;
       left: 0;
@@ -301,5 +300,20 @@ header.fixed{
         @include transform(translate(-50%,0));
       }
     }
+  }
+}
+.nav-login-button{
+  display: inline-block !important;
+  padding: 5px 48px !important;
+  color: #fff !important;
+  background-color: $blue !important;
+  position: relative;
+
+  &:before{
+    content: '\f007';
+    font-family: FontAwesome, sans-serif;
+    position: absolute;
+    left: 20px;
+    @include centerVertical;
   }
 }
