--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -66,3 +66,18 @@
   top: 0;
   background: rgba($color, $opacity);
 }
+
+@mixin icon ($content){
+  content: $content;
+  font-family: FontAwesome, sans-serif;
+}
+
+@mixin centerVertical{
+  top: 50%;
+  @include transform(translate(0, -50%));
+}
+@mixin centerBoth{
+  top: 50%;
+  left: 50%;
+  @include transform(translate(-50%, -50%));
+}
