--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -56,7 +56,7 @@
     position: fixed;
     overflow-y: scroll;
     z-index: 100;
-    height: 100%;
+    height: 150%;
     width: 100%;
     background-color: #fff;
     padding: 10px 0;
@@ -108,6 +108,18 @@
 
   .nav-menu.visible {
     @include transform(translate(100%, 0));
+  }
+
+  .nav-login-button{
+
+    display: inline-block !important;
+    padding: 5px 48px !important;
+    background-color: $blue !important;
+    color: #fff !important;
+
+    &:before{
+      left: 20px;
+    }
   }
 
   #footer_bottom{
